--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,26 +1,26 @@
 <div class="container container-black">
-  <span>
+  <div class="contact-info">
     <a href="https://www.linkedin.com/in/cruznunez" class="black-underline">
       <i class="fa fa-linkedin-square"></i>
       Cruz A. Núñez
     </a>
-  </span>
-  <span>
+  </div>
+  <div class="contact-info">
     <a href="https://github.com/cruznunez" class="black-underline">
       <i class="fa fa-github-square"></i>
       cruznunez
     </a>
-  </span>
-  <span>
+  </div>
+  <div class="contact-info">
     <a href="mailto:nunez.a.cruz@gmail.com" class="black-underline email">
       <i class="fa fa-envelope"></i>
       nunez.a.cruz@gmail.com
     </a>
-  </span>
-  <span>
+  </div>
+  <div class="contact-info">
     <a href="tel:919-593-2828" class="black-underline phone">
       <i class="fa fa-phone"></i>
       (919) 593 2828
     </a>
-  </span>
+  </div>
 </div>
