--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,35 +2,33 @@
   <h1 class="project-name">
     Cruz Núñez
   </h1>
-
   <h2 class="project-tagline">
     <%= @page == 'Home' ? 'Software Developer' : @page %>
   </h2>
-
 </section>
 <div class="container container-white">
-  <span>
+  <div class="contact-info">
     <a href="https://www.linkedin.com/in/cruznunez" class="white-underline">
       <i class="fa fa-linkedin-square"></i>
-      Cruz A. Núñez
+      <span class="text">Cruz A. Núñez</span>
     </a>
-  </span>
-  <span>
+  </div>
+  <div class="contact-info">
     <a href="https://github.com/cruznunez" class="white-underline">
       <i class="fa fa-github-square"></i>
-      cruznunez
+      <span class="text">cruznunez</span>
     </a>
-  </span>
-  <span>
+  </div>
+  <div class="contact-info">
     <a href="mailto:nunez.a.cruz@gmail.com" class="white-underline email">
       <i class="fa fa-envelope"></i>
-      nunez.a.cruz@gmail.com
+      <span class="text">nunez.a.cruz@gmail.com</span>
     </a>
-  </span>
-  <span>
+  </div>
+  <div class="contact-info">
     <a href="tel:919-593-2828" class="white-underline phone">
       <i class="fa fa-phone"></i>
-      (919) 593 2828
+      <span class="text">(919) 593 2828</span>
     </a>
-  </span>
+  </div>
 </div>
