--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,12 @@
+<style>
+  .<%= @page %> {
+    color: #2222CD !important;
+  }
+</style>
 <div id="nav">
   <nav>
-    <a href="/"><span class="button">Home</span></a>
-    <a href="projects"><span class="button">Projects</span></a>
-    <a href="resume"><span class="button">Resumé</span></a>
+    <a href="/"><span class="button Home"><i class="fa fa-home"></i>Home</span></a>
+    <a href="projects"><span class="button Projects"><i class="fa fa-file-code-o"></i>Projects</span></a>
+    <a href="resume"><span class="button Resumé"><i class="fa fa-check-square-o"></i>Resumé</span></a>
   </nav>
 </div>
