--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Cruz | <%= @page %></title>
-  <link rel="icon" href=<%= asset_url("logo.png") %>>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<%= @page != 'Home' ? '<body>'.html_safe : '<body style="padding-bottom:0;">'.html_safe %>
-  <%= render 'layouts/header' %>
-  <%= render 'layouts/navigation' %>
-  <section class="main-content">
-    <%= yield %>
-  </section>
-  <% unless @page == 'Home' %>
-    <%= render 'layouts/footer' %>
-  <% end %>
-</body>
+  <head>
+    <title>Cruz | <%= @page %></title>
+    <meta name="viewport" content="initial-scale=1">
+    <link rel="icon" href=<%= asset_url("logo.png") %>>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
+  <%= @page != 'Home' ? '<body>'.html_safe : '<body style="padding-bottom:0;">'.html_safe %>
+    <%= render 'layouts/header' %>
+    <%= render 'layouts/navigation' %>
+    <section class="main-content">
+      <%= yield %>
+    </section>
+    <% unless @page == 'Home' %>
+      <%= render 'layouts/footer' %>
+    <% end %>
+  </body>
 </html>
