--- a/app/assets/stylesheets/defaults.scss
+++ b/app/assets/stylesheets/defaults.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the pages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
 .main-content:first-child {
   margin-top: 0;
 }
@@ -13,10 +10,6 @@
   font-weight: normal;
   color:  #2222CD;
 ;
-}
-.main-content p {
-  margin-bottom: 0;
-  /*margin-bottom: 1em;*/
 }
 .main-content code {
   padding: 2px 4px;
@@ -136,11 +129,15 @@
   .main-content {
     padding: 2rem 4rem;
     font-size: 1.1rem;
+    max-width: 70%;
+    left: 0;
+    right: 0;
+    margin: auto;
   }
 }
 @media screen and (max-width: 42em) {
   .main-content {
-    padding: 2rem 1rem;
+    padding: 2rem 1rem 3rem;
     font-size: 1rem;
   }
 }
