--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,3 +1,5 @@
+@import 'sass';
+
 div.container-black {
   border-top: 2px solid rgba(0, 0, 0, .25);
   position: absolute;
@@ -5,6 +7,12 @@ div.container-black {
   color: black;
   padding: 15px 5%;
   z-index: 1;
+  @include mobile {
+    display: none;
+  }
+  @include tablet {
+    padding: 15px 2% !important;    
+  }
 }
 a.black-underline {
   font-size: 18px;
