--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -1,36 +1,75 @@
-a.white-underline {
+@import 'sass';
+@include mobile {
+  .text {
+    display: none;
+  }
+  .project-name {
+    font-size: 24px !important;
+  }
+  .project-tagline {
+    display: none;
+  }
+
+  .contact-info {
+    line-height: 55px;
+    margin: 0 !important;
+    &:first-child,
+    &:nth-child(2n) {
+      float: left;
+    }
+    &:nth-child(3n),
+    &:last-child {
+      float: right;
+    }
+    i {
+      font-size: 1.2em;
+
+      margin: 10px;
+      &:hover {
+        border-bottom: none !important;
+      }
+    }
+  }
+  .page-header {
+    line-height: 55px;
+  }
+  .container-white {
+    padding: 0 !important;
+    height: 55px;
+    line-height: 55px;
+  }
+  .white-underline {
+    border-bottom: none !important;
+  }
+}
+.white-underline {
   color: inherit;
+  &:hover {
+    border-bottom: 1.5px solid #fff;
+  }
 }
-a.white-underline:hover {
-  border-bottom: 1.5px solid #fff;
-}
-div.container-white {
+.container-white {
   position: absolute;
   background: transparent;
-  padding: 10px 5%;
+  // padding: 10px 5%;
+  padding: 10px 0;
   color: white;
   transform: translateY(-100%);
 }
-div.container {
+.container {
   display: table;
   width: 100%;
   left:0;
   right:0;
   margin:auto;
 }
-div.container span {
+.contact-info {
   display: table-cell;
   text-align: center;
   margin: 10px;
-}
-div.container span:first-child {
-  text-align: left;
-}
-div.container span:last-child {
-  text-align: right;
+  width: auto;
 }
 .project-name {
-  // padding-top: 8px;
   margin: 0;
 }
 @media screen and (min-width: 64em) {
@@ -88,6 +127,6 @@ div.container span:last-child {
 }
 @media screen and (max-width: 42em) {
   .page-header {
-    padding: 1.5% 3% 1% 3%;
+    padding: 0;
   }
 }
