--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,10 +1,25 @@
+@import 'sass';
 img#self {
   display: block;
   width: 75%;
   margin: auto;
-  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.75);
-  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
+  @include tablet {
+    width: 100%;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    border-radius: 5px;
+  }
+  @include mobile {
+    width: 100%;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    border-radius: 5px;
+  }
 }
 code a {
   font-size: 110%;
