--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -51,10 +51,10 @@
 .container-white {
   position: absolute;
   background: transparent;
-  // padding: 10px 5%;
   padding: 10px 0;
   color: white;
   transform: translateY(-100%);
+  z-index: 9999;
 }
 .container {
   display: table;
