--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -27,6 +27,9 @@ img#jam-connect {
   vertical-align: top;
 }
 @include mobile {
+  .text {
+    display: none;
+  }
   .project .triplets {
   width: 49%;
     &:nth-of-type(3) {
@@ -39,6 +42,11 @@ img#jam-connect {
         vertical-align: top;
       }
     }
+  }
+}
+@include immobile {
+  .test-mobile {
+    display: none;
   }
 }
 a.pop{
