--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -46,7 +46,7 @@
     </div>
     <div class="mobile-twin">
       <li><a href="http://radio.uxder.com/" class="pop">radio.js</a></li>
-      <li><a href="http://bl.ocks.org/mbostock/4339083" class="pop">D3.js Tree Layout</a></li>
+      <li><a href="http://bl.ocks.org/mbostock/4339083" class="pop">D3<span class="text">.js</span> Tree Layout</a></li>
     </div>
   </div>
   <div class="twins">
@@ -213,12 +213,12 @@
   <div class="triplets">
     <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
     <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
-    <li><a href="http://bl.ocks.org/mbostock/4165404" class="pop">D3.js Rainbow Worm</a></li>
+    <li><a href="http://bl.ocks.org/mbostock/4165404" class="pop"><span class="text">D3.js</span> Rainbow Worm</a></li>
   </div>
   <div class="triplets">
-    <li><a href="https://developers.google.com/maps/documentation/directions/intro" class="pop">Google Directions API</a></li>
+    <li><a href="https://developers.google.com/maps/documentation/directions/intro" class="pop">Google Maps <span class="text">Directions</span> API</a></li>
     <li><a href="https://developers.google.com/qpx-express/" class="pop">QPX Express API</a></li>
-    <li><a href="http://www.fueleconomy.gov/feg/ws/#fuelprices" class="pop">Fuel Economy API</a></li>
+    <li><a href="http://www.fueleconomy.gov/feg/ws/#fuelprices" class="pop">Fuel <span class="text">Economy</span><span class="text-mobile">Price</span> API</a></li>
   </div>
   <div class="triplets">
     <div class="mobile-twin">
@@ -266,7 +266,7 @@
     <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
   </div>
   <div class="triplets">
-    <li><a href="http://www.wunderground.com/weather/api/d/docs?MR=1" class="pop">Wunderground API</a></li>
+    <li><a href="http://www.wunderground.com/weather/api/d/docs?MR=1" class="pop">Weather <span class="text">Underground</span> API</a></li>
     <li><a href="https://github.com/jnunemaker/httparty" class="pop">HTTParty</a></li>
   </div>
   <div class="triplets">
