--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -216,7 +216,7 @@
     <li><a href="http://bl.ocks.org/mbostock/4165404" class="pop"><span class="text">D3.js</span> Rainbow Worm</a></li>
   </div>
   <div class="triplets">
-    <li><a href="https://developers.google.com/maps/documentation/directions/intro" class="pop">Google Maps <span class="text">Directions</span> API</a></li>
+    <li><a href="https://developers.google.com/maps/documentation/directions/intro" class="pop adjustable">Google <span class="text-mobile">Maps</span><span class="text">Directions</span> API</a></li>
     <li><a href="https://developers.google.com/qpx-express/" class="pop">QPX Express API</a></li>
     <li><a href="http://www.fueleconomy.gov/feg/ws/#fuelprices" class="pop">Fuel <span class="text">Economy</span><span class="text-mobile">Price</span> API</a></li>
   </div>
