--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
   </head>
-  <%= @page != 'Home' ? '<body>'.html_safe : '<body style="padding-bottom:0;">'.html_safe %>
+<body>
     <%= render 'layouts/header' %>
     <%= render 'layouts/navigation' %>
     <section class="main-content">
