--- a/app/assets/stylesheets/defaults.scss
+++ b/app/assets/stylesheets/defaults.scss
@@ -137,7 +137,7 @@
 }
 @media screen and (max-width: 42em) {
   .main-content {
-    padding: 2rem 1rem 3rem;
+    padding: 2rem 1rem 0;
     font-size: 1rem;
   }
 }
