Change pinteresting url

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -292,11 +292,11 @@
 
 <div class="project">
   <h3>
-    <a class="project-title" href="http://omr-pinteresting-cruz.com/">
+    <a class="project-title" href="http://cruzpinteresting.herokuapp.com/">
       Pinteresting
     </a>
   </h3>
-  <a href="http://omr-pinteresting-cruz.com/">
+  <a href="http://cruzpinteresting.herokuapp.com/">
     <%= image_tag 'pinteresting_1.png', id: 'drive-or-flight', class: 'shadow' %>
   </a>
   <p>
@@ -320,7 +320,7 @@
   </div>
   <div class="twins">
     <p>
-      <a href="http://omr-pinteresting-cruz.com/" class="pop">
+      <a href="http://cruzpinteresting.herokuapp.com/" class="pop">
         <i class="fa fa-hand-o-up fa-lg project-icon"></i>
         Live Site
       </a>
