--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -117,6 +117,7 @@
   color: #fff;
   text-align: center;
   background: #2222CD;
+  // background: #1C3965;
   border-bottom: 1.5px solid rgba(0, 0, 0, 1);
 }
 @media screen and (min-width: 64em) {
