--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,44 +1,7 @@
 @import 'sass';
-@include mobile {
-  #nav {
-    bottom: 0 !important;
-    width: 100% !important;
-    background-color: white !important;
-    margin: 0 !important;
-    line-height: 18px !important;
-    border-top: 1px solid #BBBBBB;
-    height: 45px !important;
-    z-index: 9999;
-    position: fixed !important;
-  }
-  nav {
-    width: 100% !important;
-    padding: 7px 0 0 !important;
-  }
-  .button {
-    width: 32% !important;
-    margin: 0 !important;
-    color: #8899A6 !important;
-    background-color: white !important;
-    padding: 0 !important;
-    font-size: .8em !important;
-  }
-  .button i {
-    display: block !important;
-    line-height: .8 !important;
-    font-size: 1.7em;
-  }
-  i.fa.fa-file-code-o {
-    font-size: 1.5em !important;
-  }
+i.fa.fa-file-code-o {
+  font-size: 1.5em;
 }
-
-@include tablet {
-  nav {
-    width: 80% !important;
-  }
-}
-
 #nav {
   line-height: 30px;
   background-color: transparent;
@@ -47,8 +10,16 @@
   float: left;
   margin-top: 5vh;
   position: absolute;
-  .button i {
-    display: none;
+  @include mobile {
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    margin: 0;
+    line-height: 18px;
+    border-top: 1px solid #BBBBBB;
+    height: 45px;
+    z-index: 9999;
+    position: fixed;
   }
 }
 nav {
@@ -57,6 +28,13 @@ nav {
   width: 60%;
   padding: 8px;
   margin: auto;
+  @include tablet {
+    width: 80%;
+  }
+  @include mobile {
+    width: 100%;
+    padding: 7px 0 0;
+  }
 }
 .button {
   display: inline-block;
@@ -73,12 +51,38 @@ nav {
   font-weight: bold;
   padding: 6px 0;
   text-decoration: none;
-  transition: background 0.3s;
-  &:hover {
-    background: #00f;
+  transition: all 0.3s;
+  @include immobile {
+    &:hover {
+      background: #00f;
+    }
   }
   &:active {
     position: relative;
     top: 1px;
+  }
+  i {
+    display: none;
+    @include mobile {
+      display: block;
+      line-height: .8;
+      font-size: 1.7em;
+    }
+  }
+  @include mobile {
+    width: 32%;
+    margin: 0;
+    color: #8899A6;
+    background-color: white;
+    padding: 0;
+    font-size: .8em;
+  }
+}
+.selected {
+  @include mobile {
+    color: #2222CD;
+  }
+  @include immobile {
+    color: white;
   }
 }
