Add Where We Dream to projects

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -1,12 +1,60 @@
 <div class="project">
   <h3>
-    <a class="project-title" href="javascript:void(0)">
-      COMING SOON: Where We DREAM
+    <a class="project-title" href="http://wherewedream.org/">
+      Where We DREAM
     </a>
   </h3>
+  <a href="http://wherewedream.org/">
+    <%= image_tag 'https://s3.amazonaws.com/where-we-dream/wherewedream.jpg', id: 'jam-connect', class: 'shadow'%>
+  </a>
   <p>
-    Where We DREAM will be a tool for immigrant students to use in their incredibly difficult fight for education. It will bring highly needed information about schools, scholarships, students, and sponsors to anyone with an internet connection. Stay tuned!
+    Where We DREAM is a tool for immigrant students to use in their incredibly difficult fight for education. It brings highly needed information about schools, scholarships, students and their stories to anyone on the site.
   </p>
+  <p>
+    Technologies:
+  </p>
+  <div class="triplets">
+    <li><a href="http://rubyonrails.org/" class="pop">Ruby on Rails</a></li>
+    <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
+    <li><a href="https://jquery.com/" class="pop">jQuery</a></li>
+    <li><a href="https://github.com/codahale/bcrypt-ruby" class="pop">Bcrypt</a></li>
+  </div>
+  <div class="triplets">
+    <li><a href="https://github.com/thoughtbot/paperclip" class="pop">Paperclip</a></li>
+    <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
+    <li><a href="http://aws.amazon.com/s3/" class="pop">AWS S3</a></li>
+    <li><a href="http://bourbon.io/" class="pop">Bourbon</a></li>
+  </div>
+  <div class="triplets">
+    <div class="mobile-twin">
+      <li><a href="http://parsleyjs.org/" class="pop">parsley.js</a></li>
+      <li><a href="https://github.com/sporkmonger/addressable" class="pop">Addressable</a></li>
+    </div>
+    <div class="mobile-twin">
+      <li><a href="https://github.com/vmg/redcarpet" class="pop">Redcarpet</a></li>
+      <li><a href="https://github.com/kpumuk/meta-tags" class="pop">Meta-Tags</a></li>
+    </div>
+  </div>
+  <div class="twins">
+    <p>
+      <a href="http://wherewedream.org/" class="pop">
+        <i class="fa fa-hand-o-up fa-lg project-icon"></i>
+        Live Site
+      </a>
+    </p>
+  </div>
+  <div class="twins">
+    <p>
+      <a href="https://github.com/CodeTheDream/where_we_dream" class="pop">
+        <i class="fa fa-github-square fa-lg project-icon"></i>
+        Github Repo
+      </a>
+    </p>
+  </div>
+  <p>
+    As for now, I am the only developer on this project.
+  </p>
+
 </div>
 
 <div class="project">
