Update WWD project

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -18,21 +18,23 @@
     <li><a href="https://en.wikipedia.org/wiki/JavaScript" class="pop">JavaScript</a></li>
     <li><a href="https://jquery.com/" class="pop">jQuery</a></li>
     <li><a href="https://github.com/codahale/bcrypt-ruby" class="pop">Bcrypt</a></li>
+    <li><a href="https://github.com/thoughtbot/paperclip" class="pop">Paperclip</a></li>
   </div>
   <div class="triplets">
-    <li><a href="https://github.com/thoughtbot/paperclip" class="pop">Paperclip</a></li>
     <li><a href="http://fortawesome.github.io/Font-Awesome/" class="pop">Font Awesome</a></li>
     <li><a href="http://aws.amazon.com/s3/" class="pop">AWS S3</a></li>
     <li><a href="http://bourbon.io/" class="pop">Bourbon</a></li>
+    <li><a href="http://parsleyjs.org/" class="pop">parsley.js</a></li>
+    <li><a href="https://github.com/sporkmonger/addressable" class="pop">Addressable</a></li>
   </div>
   <div class="triplets">
     <div class="mobile-twin">
-      <li><a href="http://parsleyjs.org/" class="pop">parsley.js</a></li>
-      <li><a href="https://github.com/sporkmonger/addressable" class="pop">Addressable</a></li>
-    </div>
-    <div class="mobile-twin">
       <li><a href="https://github.com/vmg/redcarpet" class="pop">Redcarpet</a></li>
       <li><a href="https://github.com/kpumuk/meta-tags" class="pop">Meta-Tags</a></li>
+    </div>
+    <div class="mobile-twin">
+      <li><a href="https://github.com/amatsuda/kaminari" class="pop">Kaminari</a></li>
+      <li><a href="https://vida.io/gists/FLFFovRPbu2t5QwQC" class="pop">D3.js US map</a></li>
     </div>
   </div>
   <div class="twins">
