Update Where We Dream description

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -5,10 +5,10 @@
     </a>
   </h3>
   <a href="http://wherewedream.org/">
-    <%= image_tag 'https://s3.amazonaws.com/where-we-dream/wherewedream.jpg', id: 'jam-connect', class: 'shadow'%>
+    <%= image_tag 'https://s3.amazonaws.com/where-we-dream/wherewedream.jpg', class: 'shadow'%>
   </a>
   <p>
-    Where We DREAM is a tool for immigrant students to use in their incredibly difficult fight for education. It brings highly needed information about schools, scholarships, students and their stories to anyone on the site.
+    Where We DREAM is a tool for immigrant students to use in their incredibly difficult fight for education. It brings highly needed information about schools, scholarships, states, their policies, students and their stories to anyone on the site.
   </p>
   <p>
     Technologies:
