--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -36,7 +36,22 @@ nav {
     padding: 7px 0 0;
   }
 }
-.button {
+.red-button {
+  background-color: darken(#EA4335, 5%) !important;
+  border: 2px solid  darken(#EA4335, 5%) !important;
+  @include immobile {
+    &:hover {
+      color: darken(#EA4335, 5%) !important;
+    }
+  }
+}
+.big-button {
+  border: 2px solid #2222cd;
+  &:focus {
+    outline: 0;
+  }
+}
+.button, .big-button {
   display: inline-block;
   text-align: center;
   margin-bottom: 8px;
@@ -53,8 +68,11 @@ nav {
   text-decoration: none;
   transition: all 0.3s;
   @include immobile {
+    border: 2px solid #2222cd;
     &:hover {
-      background: #00f;
+      background-color: white !important;
+      color: #2222cd;
+      border: 2px solid #2222cd;
     }
   }
   &:active {
@@ -69,6 +87,8 @@ nav {
       font-size: 1.7em;
     }
   }
+}
+.button {
   @include mobile {
     width: 32%;
     margin: 0;
