--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -7,6 +7,11 @@
 }
 .shadow {
   transition: box-shadow 0.15s, opacity .15s;
+  @include mobile {
+    -webkit-box-shadow: 0 0 1px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0 0 1px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0 0 1px 0px rgba(0, 0, 0, 0.75);
+  }
 }
 .shadow:hover {
   -webkit-box-shadow: 0 0 5px 0px rgba(0, 0, 0, 0.75);
@@ -34,7 +39,7 @@
   .adjustable {
     letter-spacing: -.3px;
   }
-  .text {
+  .desktop-only {
     display: none;
   }
   .project .triplets {
@@ -52,7 +57,7 @@
   }
 }
 @include immobile {
-  .text-mobile {
+  .mobile-only {
     display: none;
   }
 }
@@ -71,4 +76,37 @@ section h3 a.project-title {
 }
 section h3 a.project-title:hover {
   border-bottom: 2.5px solid #2222CD;
+}
+.flex-container {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  align-items: center;
+}
+.flex-right {
+  margin-left: auto;
+}
+input, textarea {
+  font: inherit;
+  width: 100%;
+}
+textarea {
+  resize: vertical;
+}
+#projectPicFileField {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100% !important;
+  width: 100% !important;
+  cursor: pointer !important;
+  font-size: 0;
+}
+.project-pic-field {
+  position: relative;
 }
