--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,13 +8,13 @@
 </section>
 <div class="container container-white">
   <div class="contact-info">
-    <a href="https://www.linkedin.com/in/cruznunez" class="white-underline">
+    <a href="https://www.linkedin.com/in/cruznunez" class="white-underline" target="_blank">
       <i class="fa fa-linkedin-square"></i>
       <span class="text">Cruz A. Núñez</span>
     </a>
   </div>
   <div class="contact-info">
-    <a href="https://github.com/cruznunez" class="white-underline">
+    <a href="https://github.com/cruznunez" class="white-underline" target="_blank">
       <i class="fa fa-github-square"></i>
       <span class="text">cruznunez</span>
     </a>
