--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,6 @@
 <%= image_tag 'cruz.jpg', id: "self" %>
 
-<h3>
-  <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
-    <span class="octicon octicon-link"></span>
-  </a>
-  About Me
-</h3>
+<h3>About Me</h3>
 
 <p>
   Hey, I'm Cruz. I'm a Ruby on Rails graduate from The Iron Yard in Durham, NC. I'm currently searching for a position in the Triangle Area to develop my skills as a programmer. I
