--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -66,7 +66,7 @@
     </a>
   </h3>
   <a href="http://jamconnect.org/">
-    <%= image_tag 'jam_connect_1.png', id: 'jam-connect', class: 'shadow'%>
+    <%= image_tag 'jam_connect.gif', id: 'jam-connect', class: 'shadow'%>
   </a>
   <p>
     Jam Connect is about connecting musicians together based on what matters most: the music.
@@ -250,7 +250,7 @@
     </a>
   </h3>
   <a href="https://drive-or-flight.herokuapp.com/">
-    <%= image_tag 'drive_or_flight_1.png', id: 'drive-or-flight', class: 'shadow' %>
+    <%= image_tag 'drive_or_flight.gif', id: 'drive-or-flight', class: 'shadow' %>
   </a>
   <p>
     Drive or Flight uses three separate APIs to create a cost summary for any trip in the US and helps you decide between either flying or driving there.
