--- a/app/views/projects/_add_tech.html.erb
+++ b/app/views/projects/_add_tech.html.erb
@@ -1,8 +1,8 @@
 <div class="add-tech-field">
-  <% if project.technologies_left.any? %>
+  <% if @project.technologies_left.any? %>
     <label class="blue">Add a technology</label>
     <%= select_tag :technologies,
-        options_from_collection_for_select( project.technologies_left.sort_by{ |tech| tech.name.downcase }, 'id', 'name' ),
+        options_from_collection_for_select( @project.technologies_left.sort_by{ |tech| tech.name.downcase }, 'id', 'name' ),
         id: "add",
         include_blank: true
     %>
