Slight css change

--- a/app/views/technologies/index.html.erb
+++ b/app/views/technologies/index.html.erb
@@ -1,6 +1,6 @@
 <div class="flex-container">
   <h1 class="topless">Technologies</h1>
-  <%= link_to 'New Technology', new_technology_path, class: "flex-right" %>
+  <%= link_to 'New Technology', new_technology_path, class: "blue-link flex-right" %>
 </div>
 
 <table>
