Slight visual change

--- a/app/views/technologies/edit.html.erb
+++ b/app/views/technologies/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Technology</h1>
+<h1 class="topless">Editing Technology</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @technology %> |
-<%= link_to 'Back', technologies_path %>
+<%= back %>
