--- a/app/views/projects/_technologies.html.erb
+++ b/app/views/projects/_technologies.html.erb
@@ -1,4 +1,4 @@
-<% tech = @project.technologies %>
+<% tech = @project ? @project.technologies : project.technologies %>
 <div class="technologies">
   <% if tech.any? %>
     <p>
