Reverse tech if producation env

--- a/app/views/projects/_technologies.html.erb
+++ b/app/views/projects/_technologies.html.erb
@@ -1,4 +1,5 @@
 <% tech = @project ? @project.technologies : project.technologies %>
+<% tech.reverse! if Rails.env.production? %>
 <div class="technologies">
   <% if tech.any? %>
     <p>
