--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -26,7 +26,7 @@
     <p>
       <%= project.description.html_safe %>
     </p>
-    <%= render partial: "technologies", locals: { project: project } %>
+    <%= render "technologies", project: project %>
     <div>
       <div class="twins">
         <p>
