--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -20,7 +20,7 @@
     </div>
     <% if project.image.present? %>
       <%= link_to project.live_site, target: "_blank" do %>
-        <%= image_tag project.image.url, class: 'shadow'%>
+        <%= image_tag project.image.url.gsub('s3', 's3-us-west-2'), class: 'shadow'%>
       <% end %>
     <% end %>
     <p>
