--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,9 @@
 <%= image_tag 'cruz.jpg', id: "self" %>
 
-<h3>About Me</h3>
+<h3>About</h3>
 
 <p>
-  Hey, I'm Cruz. I'm a Ruby on Rails graduate from The Iron Yard in Durham, NC. I'm currently searching for a position in the Triangle Area to develop my skills as a programmer. I
+  I am a Ruby on Rails graduate from The Iron Yard in Durham, NC. I'm currently searching for a position in the Triangle Area to develop my skills as a programmer. I
   <code><a href="https://github.com/cruznunez">commit</a></code>
-  to producing high-quality and meaningful work. Besides coding, I like listening to music, gaming, lifting weights, and going out to eat. If you're interested in any of these,
-  <code><a href="mailto:nunez.a.cruz@gmail.com">contact me!</a></code>
+  to producing high-quality and meaningful work. If you want to team up and form amazing user experiences — you are very welcome to contact me.</code>
 </p>
