--- a/app/assets/javascripts/log_in.js.erb
+++ b/app/assets/javascripts/log_in.js.erb
@@ -14,10 +14,15 @@ function tech() {
   window.location.href = "/technologies";
 };
 
+function color() {
+  window.location.href = "/colors";
+};
+
 function keyBoardListener() {
   listener = new window.keypress.Listener();
   listener.sequence_combo("l o g i n", logIn);
   listener.sequence_combo("l o g o u t", logOut);
   listener.sequence_combo("u s e r s", users);
   listener.sequence_combo("t e c h", tech);
+  listener.sequence_combo("c o l o r", colors)
 };
