--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -36,6 +36,13 @@ nav {
     padding: 7px 0 0;
   }
 }
+.update-button {
+  background: $green !important;
+  border: 2px solid $green !important;
+  &:hover {
+    color: $green !important;
+  }
+}
 .red-button {
   background-color: darken(#EA4335, 5%) !important;
   border: 2px solid  darken(#EA4335, 5%) !important;
@@ -46,7 +53,7 @@ nav {
   }
 }
 .big-button {
-  border: 2px solid #2222cd;
+  border: 2px solid $site-color;
   &:focus {
     outline: 0;
   }
@@ -59,7 +66,7 @@ nav {
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   width: 100%;
-  background: #2222cd;
+  background: $site-color;
   cursor: pointer;
   color: #fff;
   font-size: 15px;
@@ -68,11 +75,10 @@ nav {
   text-decoration: none;
   transition: all 0.3s;
   @include immobile {
-    border: 2px solid #2222cd;
+    border: 2px solid $site-color;
     &:hover {
       background-color: white !important;
-      color: #2222cd;
-      border: 2px solid #2222cd;
+      color: $site-color;
     }
   }
   &:active {
@@ -100,7 +106,7 @@ nav {
 }
 .selected {
   @include mobile {
-    color: #2222CD;
+    color: $site-color;
   }
   @include immobile {
     color: white;
