--- a/app/assets/stylesheets/sass.scss.erb
+++ b/app/assets/stylesheets/sass.scss.erb
@@ -9,6 +9,7 @@ $salmon: #F7484E;
 $dark-blue: #1C3965;
 $light-blue: #4285F4;
 $dark-red: #CF161B;
+$other-red: #E01A10;
 $site-color: $dark-red;
 
 @mixin mobile {
