--- a/app/assets/stylesheets/sass.scss.erb
+++ b/app/assets/stylesheets/sass.scss.erb
@@ -1,16 +1,19 @@
 $phone-width: 672px;
 $tablet-width: 1007px;
 $desktop-width: 1200px;
-$green: #34A853;
-$red: #EA4335;
-$blue: #2222CD;
-$yellow: #FBBC05;
+$red: #E01A10;
+$old-red: #CF161B;
 $salmon: #F7484E;
-$dark-blue: #1C3965;
+$orange: #ff924d;
+$yellow: #FBBC05;
+$green: #27ae60;
 $light-blue: #4285F4;
-$dark-red: #CF161B;
-$other-red: #E01A10;
-$site-color: $dark-red;
+$blue: #2222CD;
+$dark-blue: #1C3965;
+$purple: #9b59b6;
+$dark-purple: #2a206b;
+$red-button: #e82e1e;
+$site-color: $blue;
 
 @mixin mobile {
   @media only screen and (min-width: 1px) and  (max-width: #{$phone-width}) {
