--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -1,4 +1,16 @@
 @import 'sass';
+.click-area {
+  position: absolute;
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  /* edit: added z-index */
+  z-index: 1;
+  /* fixes overlap error in IE7/8, make sure you have an empty gif */
+  // background-image: url('empty.gif');
+}
+
 i.fa.fa-file-code-o {
   font-size: 1.5em;
 }
@@ -7,19 +19,11 @@ i.fa.fa-file-code-o {
   background-color: transparent;
   height: auto;
   width: 21%;
-  float: left;
   margin-top: 5vh;
   position: absolute;
-  @include mobile {
-    bottom: 0;
-    width: 100%;
-    background-color: white;
-    margin: 0;
-    line-height: 18px;
-    border-top: 1px solid #BBBBBB;
-    height: 45px;
-    z-index: 9999;
-    position: fixed;
+  font-size: 0;
+  a {
+    font-size: 16px;
   }
 }
 nav {
@@ -31,10 +35,6 @@ nav {
   @include tablet {
     width: 80%;
   }
-  @include mobile {
-    width: 100%;
-    padding: 7px 0 0;
-  }
 }
 .update-button {
   background: $green !important;
@@ -44,11 +44,11 @@ nav {
   }
 }
 .red-button {
-  background-color: darken(#EA4335, 5%) !important;
-  border: 2px solid  darken(#EA4335, 5%) !important;
+  background-color: $red-button !important;
+  border: 2px solid $red-button !important;
   @include immobile {
     &:hover {
-      color: darken(#EA4335, 5%) !important;
+      color: $red-button !important;
     }
   }
 }
@@ -59,7 +59,10 @@ nav {
   }
 }
 .button, .big-button {
-  display: inline-block;
+  @include immobile {
+    display: inline-block;
+  }
+  position: relative;
   text-align: center;
   margin-bottom: 8px;
   border-radius: 8px;
@@ -67,7 +70,6 @@ nav {
   -webkit-border-radius: 8px;
   width: 100%;
   background: $site-color;
-  cursor: pointer;
   color: #fff;
   font-size: 15px;
   font-weight: bold;
@@ -87,21 +89,6 @@ nav {
   }
   i {
     display: none;
-    @include mobile {
-      display: block;
-      line-height: .8;
-      font-size: 1.7em;
-    }
-  }
-}
-.button {
-  @include mobile {
-    width: 32%;
-    margin: 0;
-    color: #8899A6;
-    background-color: white;
-    padding: 0;
-    font-size: .8em;
   }
 }
 .selected {
@@ -110,5 +97,38 @@ nav {
   }
   @include immobile {
     color: white;
+  }
+}
+@include mobile {
+  #nav {
+    bottom: 0;
+    width: 100%;
+    background-color: white;
+    margin: 0;
+    line-height: 18px;
+    border-top: 1px solid #BBB;
+    height: 45px;
+    z-index: 9999;
+    position: fixed;
+  }
+  nav {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    padding: 7px 0 0;
+  }
+  .button {
+    width: 32%;
+    color: #8899A6;
+    background-color: white;
+    padding: 0;
+    font-size: 12.8px;
+  }
+  .button, .big-button {
+    i {
+      display: block;
+      line-height: .8;
+      font-size: 1.7em;
+    }
   }
 }
