--- a/app/views/pages/colors.html.erb
+++ b/app/views/pages/colors.html.erb
@@ -1,11 +1,22 @@
-<h3>Choose a site color</h3>
+<h3 class="topless">Choose a site color</h3>
 
 <form method="post" action="colors">
   <%= text_field_tag :color, @color %>
   <div class="actions">
     <%= submit_tag 'Save color', class: 'big-button update-button' %>
   </div>
-  <script>
-    colorPicker()
-  </script>
 </form>
+
+<div class="pre">
+  <% @colors.each do |color, code| %>
+    <div
+        class="color"
+        style="background:<%= code %>;border-color:<%= code %>;"
+        onMouseOver="this.style.color='<%= code %>'"
+        onMouseOut="this.style.color='#fff'"
+    ><%= code %></div>
+  <% end %>
+</div>
+<script>
+  colorPicker()
+</script>
