--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -9,6 +9,7 @@
   border: 2px solid;
   border-radius: 8px;
   color: white;
+  cursor: pointer;
   display: inline-block;
   font-size: 15px;
   font-weight: bold;
