--- a/app/assets/stylesheets/defaults.scss
+++ b/app/assets/stylesheets/defaults.scss
@@ -141,7 +141,7 @@
   background-color: #eff0f1;
   border: 0;
 }
-@media screen and (min-width: 64em) {
+@include desktop {
   .main-content {
     max-width: 70%;
     padding: 2rem 6rem;
@@ -149,7 +149,7 @@
     font-size: 1.1rem;
   }
 }
-@media screen and (min-width: 42em) and (max-width: 64em) {
+@include tablet {
   .main-content {
     padding: 2rem 4rem;
     font-size: 1.1rem;
@@ -159,7 +159,7 @@
     margin: auto;
   }
 }
-@media screen and (max-width: 42em) {
+@include mobile {
   .main-content {
     padding: 2rem 1rem 0;
     font-size: 1rem;
