--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -119,17 +119,17 @@
   background: $site-color;
   transition: all .3s;
 }
-@media screen and (min-width: 64em) {
+@include desktop {
   .page-header {
     padding: 2% 3% 1.8% 3%;
   }
 }
-@media screen and (min-width: 42em) and (max-width: 64em) {
+@include tablet {
   .page-header {
     padding: 1.5% 3% 1% 3%;
   }
 }
-@media screen and (max-width: 42em) {
+@include mobile {
   .page-header {
     padding: 0;
   }
