--- a/app/assets/stylesheets/sass.scss.erb
+++ b/app/assets/stylesheets/sass.scss.erb
@@ -22,16 +22,16 @@ $site-color: $blue;
 }
 
 @mixin tablet {
-  @media (min-width: #{$phone-width + 1px}) and (max-width: #{$tablet-width}) {
+  @media (min-width: #{$phone-width + 1px}) and (max-width: #{$desktop-width}) {
     @content;
   }
 }
 
-@mixin laptop {
-  @media (min-width: #{$tablet-width + 1px}) and (max-width: #{$desktop-width}) {
-    @content;
-  }
-}
+// @mixin laptop {
+//   @media (min-width: #{$tablet-width + 1px}) and (max-width: #{$desktop-width}) {
+//     @content;
+//   }
+// }
 
 @mixin desktop {
   @media (min-width: #{$desktop-width + 1px}) {
