Add no appearance css for buttons

--- a/app/assets/stylesheets/sass.scss.erb
+++ b/app/assets/stylesheets/sass.scss.erb
@@ -44,3 +44,11 @@ $site-color: $blue;
     @content;
   }
 }
+
+@mixin appearance($value) {
+  -webkit-appearance: $value;
+  -moz-appearance: $value;
+  -ms-appearance: $value;
+  -o-appearance: $value;
+  appearance: $value;
+}
