--- a/app/assets/stylesheets/navigation.scss
+++ b/app/assets/stylesheets/navigation.scss
@@ -61,6 +61,7 @@ nav {
   }
 }
 .button, .big-button {
+  @include appearance(none);
   position: relative;
   text-align: center;
   margin-bottom: 8px;
