--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,18 @@
     <section class="main-content">
       <%= yield %>
     </section>
-    <% unless %w[Home Colors].include? @page %>
+    <% if %w[Projects Resumé].include? @page %>
       <%= render 'layouts/footer' %>
     <% end %>
   </body>
+  <!-- Google Analytics code -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-75001172-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </html>
