--- a/app/views/pages/resume.html.erb
+++ b/app/views/pages/resume.html.erb
@@ -1,8 +1,7 @@
-<div class="resume-container">
-  <a id="download-resume" href='resume_cruz_nunez.pdf' download>
-    <div class="icon">
-      <i class="fa fa-cloud-download"></i>
-    </div>
-    <%= image_tag 'resume_cruz_nunez.jpg', id: 'resume' %>
-  </a>
-</div>
+<p>
+  Download Resumé:
+  <a href="resume_cruz_nunez.pdf" download>PDF</a> |
+  <a href="resume_cruz_nunez.docx" download>DOCX</a>
+</p>
+<%= image_tag 'resume_1.jpg', class: 'resume' %>
+<%= image_tag 'resume_2.jpg', class: 'resume' %>
