--- a/app/assets/stylesheets/v2/defaults.scss
+++ b/app/assets/stylesheets/v2/defaults.scss
@@ -179,7 +179,16 @@ body {
   padding: 0;
   padding-bottom: 4em;
   margin: 0;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  // font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+  // Experiment 1
+  // font-family: 'Oswald', sans-serif;
+  // font-weight: 300;
+  // letter-spacing: 1px;
+
+  // Experiment 2
+  font-family: 'Exo', sans-serif;
+
   font-size: 16px;
   line-height: 1.5;
   color: #606c71;
