--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,15 @@
     <%= display_meta_tags %>
     <meta name="viewport" content="initial-scale=1">
     <link rel="icon" href="<%= asset_url 'logo.png' %>">
-    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= stylesheet_link_tag "#{v}/application", media: 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= site_color %>
-    <%= render 'layouts/header' %>
-    <%= render 'layouts/navigation' %>
+    <%= site_color if v == 'v1' %>
+    <%= render "#{v}/layouts/header" %>
+    <%= render "#{v}/layouts/navigation" %>
+    <%= render 'layouts/version'  %>
     <section class="main-content">
       <%= yield %>
     </section>
