--- a/app/views/v1/projects/index.html.erb
+++ b/app/views/v1/projects/index.html.erb
@@ -1,6 +1,6 @@
 <% if logged_in? %>
   <div class="flex-container">
-    <%= link_to new_project_path, id: 'add-project', class: 'flex-right' do %>
+    <%= link_to new_v1_project_path, id: 'add-project', class: 'flex-right' do %>
       <i class="fa fa-plus"></i> Add Project
     <% end %>
   </div>
@@ -13,7 +13,7 @@
         <%= link_to project.name, project.live_site, class: "project-title", target: "_blank" %>
       </h3>
       <% if logged_in? %>
-        <%= link_to edit_project_path(project), class: 'edit-project flex-right' do %>
+        <%= link_to edit_v1_project_path(project), class: 'edit-project flex-right' do %>
           <i class="fa fa-pencil"></i> Edit
         <% end %>
       <% end %>
